# register

.github/workflows/: tauri-build.yml
checkout/: .gitignore  README.md  box.scad  checkout.scad  lid.scad  lower_lip.stl  main_case_rear.stl  pn532_lid.stl  pn532_main.stl
nfc/read_nfc/: read_nfc.ino
nfc/read_nfc/write_nc/: write_nc.ino
pos/: Cargo.toml  Dockerfile  build.sh  deploy.sh
pos/src/: main.rs
pos_nfc/pos_nfc/: pos_nfc.ino
register/: Dockerfile  README.md  angular.json  import_bonus_sound.bash  package-lock.json  package.json  tsconfig.json  tsfmt.json
register/src/: index.html  styles.less  styles.scss
register/src-tauri/: Cargo.lock-old  Cargo.toml  bonus_pictures  tauri.conf.json
register/src-tauri/src/: main.rs  nfc.rs  receipt.rs  scanner.rs
register/src/app/: app.component.html  app.component.less  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts  barcode.service.ts  cart.ts  item.service.ts  item.ts  login.service.ts  nfc.service.ts  point-of-sale.service.ts
register/src/app/bonus-picture-picker/: bonus-picture-picker.component.html  bonus-picture-picker.component.scss  bonus-picture-picker.component.spec.ts  bonus-picture-picker.component.ts
register/src/app/checkout/: checkout.component.html  checkout.component.less  checkout.component.ts  payment-dialog.html
register/src/app/item-scan/: item-scan.component.html  item-scan.component.scss  item-scan.component.spec.ts  item-scan.component.ts
register/src/app/login/: login.component.html  login.component.less  login.component.scss  login.component.ts
(+12 files in other folders)
