[package]
name = "pos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
escpos = { version = "0.6.0", features = ["full"] }
eframe = { version = "0.24.1", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { version = "0.24.1", features = ["image"] }

env_logger = "0.10"