[package]
name = "pos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
escpos = { version = "0.6.0", features = ["full"] }
env_logger = "0.10"
fltk = { version = "^1.4", git = "https://github.com/fltk-rs/fltk-rs", features = ["fltk-bundled"] }
